@@ -13,12 +13,6 @@ matrix:
     - python: 3.6
       env: TOXENV=py36-django111
     - python: 3.5
-      env: TOXENV=py35-django20
-    - python: 3.6
-      env: TOXENV=py36-django20
-    - python: 3.7
-      env: TOXENV=py37-django20
-    - python: 3.5
       env: TOXENV=py35-django21
     - python: 3.6
       env: TOXENV=py36-django21
