@@ -2,7 +2,6 @@
 envlist =
     lint
     py{35,36}-django111
-    py{35,36,37}-django20
     py{35,36,37}-django21
     py{35,36,37}-django22
     py{36,37}-django30
@@ -12,7 +11,6 @@ envlist =
 commands = {envpython} -Wa -b -m coverage run -m django test --settings=tests.settings
 deps =
     django111: Django>=1.11,<2.0
-    django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
     django30: Django>=3.0a1,<3.1
